--- a/public/css/loginStyle.css
+++ b/public/css/loginStyle.css
@@ -25,6 +25,78 @@ body {
     margin: unset;
 }
 
+/* Iniciar sesion */
+
+.caja-inicio {
+    text-align: center;
+    width: 60%;
+    margin-top: 100px;
+    margin-left: 15.5%;
+    margin-bottom: 20px;
+    padding: 30px;
+    padding-bottom: 20px;
+    background-color: var(--lightgray);
+    /*border: solid 2px var(--orange);*/
+    border-radius: 20px;
+
+}
+
+.caja-inicio h2{
+    border-bottom: 4px solid var(--orange);
+    display: inline-block;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 0;
+}
+
+.field {
+    text-align: left;
+    margin-left: 30px;
+}
+
+form label {
+    font-weight: 600;
+    margin-top: 10px;
+    width: 100%;
+    display: inline-block;
+}
+
+form .input-text {
+    font-size: 16px;
+    border-color: var(--lightgray);
+    border-radius: 5px;
+    font-family: inherit;
+    height: 20px;
+    margin-bottom: 10px;
+    width: 85%;
+}
+
+form .contrasena {
+    margin-bottom: 0px;
+}
+
+form .olvidaste {
+    color: var(--blue);
+}
+
+form i {
+    padding-left: 10px;
+}
+
+.pequeño{
+    font-size: 12px;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+form .recordarme {
+    margin: 0px;
+}
+
+.corrido {
+    display: inline-block;
+}
 
 button {
     background-color: var(--blue);
@@ -34,94 +106,61 @@ button {
     font-family: inherit;
     font-size: 14px;
     font-weight: 500;
-    padding: 5px 10px;
+    margin-top: 0px;
+    padding: 5px 25px;
     transition: background-color 0.3s;
 }
 
 button:hover {
     background-color: var(--darkblue);
+    cursor: pointer;
 }
 
-.centrado {
-    font-weight: bold;
+button i {
+    padding-right: 10px;
+}
+
+button i:hover {
+    color: var(--white);
+}
+
+.button-especial:hover {
+    background-color: var(--orange);
+}
+
+.ayuda {
+    margin: 0;
+}
+
+.upper{
+    color:var(--orange);
     text-align: center;
+    margin-top: 10px;
 }
 
-.pequeño {
-    font-size: 12px;
-    text-align: center;
-}
-
-.caja-main {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    align-content: space-between;
-    flex-direction: row;
-}
-
-.caja-inicio {
-    display: flex;
-    flex-wrap: wrap;
-    width: 550px;
-    height: 400px;
-    padding: 12px;
-    margin: 40px 70px 10px 70px;
-    border: solid 1px gray;
-    border-radius: 5%;
-    justify-content: center;
-    align-content: center;
-    align-self: flex-start;
-}
+/* Prompt a suscribirse */
 
 .caja-right {
-    display: flex;
-    width: 700px;
-    height: 450px;
-    padding: 12px;
-    margin: 10px 30px 10px 20px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    align-self: flex-start;
-}
-
-.caja-main-bottom {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    align-content: space-between;
-    flex-direction: row;
-    justify-content: space-around;
-}
-
-.caja-pedido {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 300px;
-    height: 450px;
-    padding: 12px;
-    margin: 20px 30px 20px 30px;
-    border: solid 1px gray;
-    border-radius: 5%;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-
-.titulo {
-    font-size: 15px;
     text-align: center;
-    font-weight: bold;
-    margin: 2px 0px 10px; 
+    margin-bottom: 30px;
 }
 
-.lista-centro {
-    font-size: 11px;
-    text-align: center;
-    margin: 10px 0px 10px;
+.caja-right .titulo {
+    font-weight: 600;
 }
+
+.caja-right .subtitulo {
+    font-weight: 600;
+}
+
+.caja-right ul {
+    text-align: center;
+    list-style-position: inside;
+    padding: 0;
+}
+
+
+/* Imagen */
 
 #slideshow-container {
     position: relative;
@@ -136,7 +175,7 @@ button:hover {
 }
 
 #slideshow-text {
-    left: 690px;
+    left: 30px;
     position: absolute;
     top: 10%;
 }
@@ -144,48 +183,141 @@ button:hover {
 #slideshow-container p {
     font-size: 24px;
     font-weight: 600;
-    margin-bottom: 20px;
-    width: 80%;
+    margin-bottom: 10px;
+    width: 60%;
 }
 
-.fa-facebook-square {
-    font-size: 23px;
-}
-.fa-google-plus-square{
-    font-size: 26px;
-}
+/* Sigue tu pedido */
 
-.fa-question-circle {
-    font-size: 25px;
-}
-
-.upper{
-    text-align: right;
-    font-size: 20px;
-}
-
-/* Titulos */
-
-h2 {
-    font-size: 20px;
-    margin: 5px 0px 20px;
-    text-align: justify;
-}
-
-@media (min-width: 560px) { 
-
-    
+.caja-pedido {
+    text-align: center;
+    width: 60%;
+    margin-top: 50px;
+    margin-left: 15.5%;
+    margin-bottom: 50px;
+    padding: 30px;
+    padding-bottom: 40px;
+    background-color: var(--lightgray);
+    /*border: solid 2px var(--orange);*/
+    border-radius: 20px;
 
 }
+
+.caja-pedido h2{
+    border-bottom: 4px solid var(--orange);
+    display: inline-block;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 30px;
+    padding: 0;
+}
+
+.caja-pedido i:hover {
+    color: var(--darkgray);
+}
+
 
 @media (min-width: 720px) {
 
+    /* Forms */
 
+    .caja-inicio {
+        width: 50%;
+        margin-left: 20%;
+    }
+
+    .caja-pedido {
+        width: 50%;
+        margin-left: 20%;
+    }
+
+    /* Slideshow */
+
+    #slideshow-container p {
+        font-size: 26px;
+    }
+
+    #slideshow-text {
+        left: 40px;
+        top: 25%;
+    }
 
 }
 
 @media (min-width: 890px) { 
 
+    /* Cajas */
 
+    .caja-main{
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        margin-bottom: 40px;
+
+    }
+
+    .pequeño {
+        font-size: 14px;
+    }
+
+    .caja-inicio {
+        width: 35%;
+        margin-left: 0;
+        margin-top: 40px;
+    }
+
+    .caja-right {
+        width: 35%;
+    }
+
+    .caja-right .titulo {
+        font-size: 20px;
+    }
+
+    .caja-right .subtitulo {
+        font-size: 20px;
+    }
+
+    .caja-pedido {
+        width: 35%;
+        margin-left: 30%;
+    }
+
+    /*Slideshow*/
+
+    #slideshow-container img {
+        height: 65vh;
+        object-fit: cover;
+
+    }
+
+    #slideshow-text {
+        left: 50px;
+        top: 30%;
+    }
+
+    #slideshow-container p {
+        font-size: 30px;
+    }
 
 }
+
+@media (min-width: 1200px) {
+
+    .caja-inicio {
+        width: 20%;
+        margin-left: 0;
+        margin-top: 40px;
+    }
+
+    .caja-right {
+        width: 35%;
+    }
+
+    .caja-pedido {
+        width: 20%;
+        margin-left: 35%;
+    }
+
+}
+    
