--- a/public/css/registerStyle.css
+++ b/public/css/registerStyle.css
@@ -25,6 +25,78 @@ body {
     margin: unset;
 }
 
+/* Registro */
+
+.caja-registro {
+    text-align: center;
+    width: 60%;
+    margin-top: 100px;
+    margin-left: 15.5%;
+    margin-bottom: 20px;
+    padding: 30px;
+    padding-bottom: 45px;
+    background-color: var(--lightgray);
+    /*border: solid 2px var(--orange);*/
+    border-radius: 20px;
+
+}
+
+.caja-registro h2{
+    border-bottom: 4px solid var(--orange);
+    display: inline-block;
+    font-size: 24px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+    padding: 0;
+}
+
+.caja-registro .subtitulo {
+    font-weight: 600;
+}
+
+.field {
+    text-align: left;
+    margin-left: 40px;
+}
+
+form label {
+    font-weight: 600;
+    margin-top: 10px;
+    width: 100%;
+    display: inline-block;
+}
+
+form .input-text {
+    font-size: 16px;
+    border-color: var(--lightgray);
+    border-radius: 5px;
+    font-family: inherit;
+    height: 20px;
+    margin-bottom: 10px;
+    width: 85%;
+}
+
+form .contrasena {
+    margin-bottom: 0px;
+}
+
+form i {
+    padding-left: 10px;
+}
+
+form i:hover {
+    color: var(--darkgray);
+}
+
+.pequeño{
+    font-size: 12px;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.corrido {
+    display: inline-block;
+}
 
 button {
     background-color: var(--blue);
@@ -34,104 +106,35 @@ button {
     font-family: inherit;
     font-size: 14px;
     font-weight: 500;
-    padding: 5px 10px;
+    margin-top: 0px;
+    padding: 5px 25px;
     transition: background-color 0.3s;
 }
 
 button:hover {
     background-color: var(--darkblue);
+    cursor: pointer;
 }
 
-.centrado {
-    font-weight: bold;
+button i {
+    padding-right: 10px;
+}
+
+button i:hover {
+    color: var(--white);
+}
+
+.button-especial:hover {
+    background-color: var(--orange);
+}
+
+.disclaimer {
     text-align: center;
+    width: 80%;
+    margin-left: 10%;
 }
 
-.pequeño {
-    font-size: 12px;
-    text-align: center;
-}
-
-
-.caja-main-bottom {
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.caja-img {
-    display: flex;
-    width: auto;
-    align-items: stretch;
-
-}
-
-.caja-registro {
-    display: flex;
-    width: 280px;
-    height: 530px;
-    padding: 12px;
-    margin: 20px 20px 20px 30px;
-    border: solid 1px gray;
-    border-radius: 5%;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.caja-main-top{
-    display: flex;
-    flex-wrap: nowrap;
-    width: 100%;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.fa-facebook-square {
-    font-size: 23px;
-}
-.fa-google-plus-square{
-    font-size: 26px;
-}
-
-.leyenda1 {
-    display: flex;
-    width: 350px;
-    height: 150px;
-    padding: 12px;
-    margin: 20px 20px 20px 30px;
-    justify-content: space-around;
-    flex-direction: row;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.leyenda2 {
-    display: flex;
-    width: 500px;
-    height: 150px;
-    padding: 12px;
-    margin: 20px 20px 20px 30px;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-}
-
-.tipo {
-    font-size: 15px;
-    margin: 5px;
-    text-align: justify;
-    color:gray;
-}
-.tipo1 {
-    font-size: 7px;
-    margin: 5px;
-    text-align: center;
-}
+/* Imagen */
 
 #slideshow-container {
     position: relative;
@@ -142,39 +145,90 @@ button:hover {
 }
 
 #slideshow-container img {
-    width: 140%;
+    width: 100%;
 }
 
+#slideshow-text {
+    left: 30px;
+    position: absolute;
+    top: 10%;
+}
 
 #slideshow-container p {
     font-size: 24px;
     font-weight: 600;
-    margin-bottom: 20px;
-    width: 80%;
+    margin-bottom: 10px;
+    width: 60%;
 }
 
-/* Titulos */
-
-h2 {
-    font-size: 20px;
-    margin: 30px 0px 20px;
-    text-align: justify;
-}
-
-@media (min-width: 560px) { 
-
-    
-
-}
 
 @media (min-width: 720px) {
 
+    /* Forms */
 
+    .caja-registro {
+        width: 50%;
+        margin-left: 20%;
+    }
+
+    .caja-pedido {
+        width: 50%;
+        margin-left: 20%;
+    }
+
+    /* Slideshow */
+
+    #slideshow-container p {
+        font-size: 26px;
+    }
+
+    #slideshow-text {
+        left: 40px;
+        top: 25%;
+    }
 
 }
 
 @media (min-width: 890px) { 
 
+    /* Cajas */
 
+    .pequeño {
+        font-size: 14px;
+    }
+
+    .caja-registro {
+        width: 40%;
+        margin-left: 25%;
+    }
+
+    .disclaimer {
+        width: 40%;
+        margin-left: 29%;
+    }
+
+
+    /*Slideshow*/
+
+    #slideshow-container img {
+        height: 65vh;
+        object-fit: cover;
+
+    }
 
 }
+
+@media (min-width: 1200px) {
+
+    .caja-registro {
+        width: 30%;
+        margin-left: 32.5%;
+    }
+
+    .disclaimer {
+        width: 30%;
+        margin-left: 35%;
+    }
+
+}
+    
