user CRUD inicio

--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -18,7 +18,7 @@
 
                 <p class="subtitulo">¿Aún no eres miembro?</p>
 
-                <form action="/register" method="POST">
+                <form action="/user/" method="POST">
                     <p class="field">
                         <label for="nombre">Nombre:</label>
                         <input class="input-text" type="text" name="nombre">
