session y cookies installed

--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -24,6 +24,7 @@
                     <div class="user-info">
                         <h3><%=user.nombre%> <%=user.apellido%></h3> <a href=""><i class="fas fa-pen i-especial"></i></a>
                         <p> <span class="bold">Tipo:</span> <%=user.tipo%></p>
+                        <p> <span class="bold">Fecha Nac.:</span> <%=user.fechaNac%></p>
                         <p><i class="fas fa-envelope"></i> <%=user.email%></p>
                     </div>
                 </div>
