--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -28,6 +28,10 @@
                         <input class="input-text" type="text" name="apellido">
                     </p>
                     <p class="field">
+                        <label for="fecha">Fecha de nacimiento:</label>
+                        <input class="input-text" type="date" name="fecha">
+                    </p>
+                    <p class="field">
                         <label for="correo">Correo:</label>
                         <input class="input-text" type="email" name="correo">
                     </p>
