--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -16,7 +16,7 @@
         <div class="caja-inicio">
             <h2>Iniciar Sesión</h2>
 
-            <form action="/login" method="POST">
+            <form action="/user/login" method="POST">
                 <p class="field">
                     <label for="correo">Correo electrónico:</label><br>
                     <input type="email" name="correo" class="input-text"><i class="fas fa-envelope"></i>
