--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -36,7 +36,7 @@
         </div>
 
         <ul>
-            <li><a href="/user/login"><i class="fas fa-user"></i></a></li>
+            <li><a href="/user/login"><i class="fas fa-user"></i></a> <% if(locals.user != undefined) { %> <span class="user">¡Hola <%=locals.user.nombre%>! </span> <% } %></li>
             <li><a href="/user/cart"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
 
