--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -20,7 +20,7 @@
 
             <div id="slideshow-text">
                 <p>Entrena y da lo mejor de ti</p>
-                <button>Empieza ya</button>
+                <button class="especial">Empieza ya</button>
             </div>
 
         </div>
@@ -59,7 +59,7 @@
         <div id="invitacion-registro">
 
             <p>¡Sé parte de nuestra comunidad para obtener descuentos!</p>
-            <button>Unirse</button>
+            <a href="user/register/"><button>Unirme</button></a>
 
         </div>
 
