--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -19,13 +19,13 @@
         <section class="perfil">
                 <div class="datos">
                     <div class="user-img">
-                        <img src="<%=user.imagen%>">
+                        <img src="<%=user.user_avatar%>">
                     </div>
                     <div class="user-info">
-                        <h3><%=user.nombre%> <%=user.apellido%></h3> <a href=""><i class="fas fa-pen i-especial"></i></a>
-                        <p> <span class="bold">Tipo:</span> <%=user.tipo%></p>
-                        <p> <span class="bold">Fecha Nac.:</span> <%=user.fechaNac%></p>
-                        <p><i class="fas fa-envelope"></i> <%=user.email%></p>
+                        <h3><%=user.user_firstname%> <%=user.user_lastname%></h3> <a href="/user/<%=user.user_id%>/edit"><i class="fas fa-pen i-especial"></i></a>
+                        <p> <span class="bold">Tipo:</span> <%=user.user_type_info.user_type_name%></p>
+                        <p> <span class="bold">Fecha Nac.:</span> <%=user.user_dob%></p>
+                        <p><i class="fas fa-envelope"></i> <%=user.user_email%></p>
                     </div>
                 </div>
         </section>
@@ -38,13 +38,13 @@
 
             <article class="producto-parecido">
                 
-                <a href="/products/<%=productos[i].id%>">
+                <a href="/products/<%=productos[i].product_id%>">
                 <div class="foto-parecido">
-                    <img src="<%=productos[i].thumbnail%>" alt="<%=productos[i].alt%>">
+                    <img src="<%=productos[i].product_thumbnail%>" alt="<%=productos[i].product_alt%>">
                 </div>
-                <p class="titulo-producto"><%=productos[i].nombre%></p>
-                <p class="descripcion-producto"><%=productos[i].desc%></p>
-                <p class="precio-producto">$<%=productos[i].precio%></p>
+                <p class="titulo-producto"><%=productos[i].product_name%></p>
+                <p class="descripcion-producto"><%=productos[i].product_desc%></p>
+                <p class="precio-producto">$<%=productos[i].product_price%></p>
                 </a>
             
             </article>
