--- a/public/css/registerStyle.css
+++ b/public/css/registerStyle.css
@@ -161,6 +161,14 @@ button i:hover {
     width: 60%;
 }
 
+form .current-img{
+    margin:0;
+    color: var(--darkblue);}
+
+div.field {
+    margin-bottom: 40px;
+}
+
 
 @media (min-width: 720px) {
 
